Fixed contact link

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 				<li><a id="services" href="services.html">Usluge</a></li>
 				<li><a id="projects" href="projects.html">Projekti</a></li>
 				<li><a id="about" href="#">O nama</a></li>
-				<li><a id="contact" href="contact.php">Kontakt</a></li>
+				<li><a id="contact" href="contact.html">Kontakt</a></li>
 <!-- 				<li><a id="blog" href="blog/index.php">Blog</a></li>
  				<li><a id="eng" class="lang" href="about-en.html">English</a></li>
 				<li><a id="mne" class="lang" href="#">Srpski</a></li>-->
