--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<li><a id="services" href="services.html">Usluge</a></li>
 				<li><a id="projects" href="projects.html">Projekti</a></li>
 				<li><a id="about" href="about.html">O nama</a></li>
-				<li><a id="contact" href="contact.php">Kontakt</a></li>
+				<li><a id="contact" href="contact.html">Kontakt</a></li>
 <!-- 				<li><a id="blog" href="blog/index.php">Blog</a></li>
 				<li><a id="eng" class="lang" href="index-en.html">English</a></li>
 				<li><a id="mne" class="lang" href="#">Srpski</a></li> -->
