Updated phone numbers

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 					<a class="drustvene_mreze_na_slikama" href="https://twitter.com/MonteCoder" target="_blank"><img src="img/social_twitter.png" alt="Milošev Twitter"></a>
 				</div>
 			</div>
-			<h2 id="services_heading_about" class="heading_tekst">Zainteresovani za rad sa nama ? <a id="hire_us" href="contact.php">Kontakt</a></h2>
+			<h2 id="services_heading_about" class="heading_tekst">Zainteresovani za rad sa nama ? <a id="hire_us" href="contact.html">Kontakt</a></h2>
 		</div>
 			
 	</div>
@@ -106,7 +106,7 @@
 <footer id="footer_about">
 	<div id="center_footer">
 		<div class="footer_tekst" id="footer_tekst_prvi">
-			<p>email: info@montecode.me<br>telefon: +382679125552<br>Nikšić, Crna Gora</p>
+			<p>email: info@montecode.me<br>telefon: +38267125552<br>Nikšić, Crna Gora</p>
 		</div>
 		<div id="drugi_blok" class="footer_tekst">
 			<div id="social">
