--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
 			<div id="kontakt_center_main">
 				<h1 id="kontakt_heading_tekst" class="">Kontaktirajte nas preko email-a ili telefona...</h1>
 				<h2 style="text-align:center;">Email: info@montecode.me</h2>
-				<h2  style="text-align:center;"> Broj telefona: +382679125552</h2>
-				<form style="visibility:hidden;" method="post" action="contact.php">
+				<h2  style="text-align:center;"> Broj telefona: +38267125552</h2>
+				<form style="visibility:hidden;" method="post" action="contact.html">
 					<div class="wrapping_inputs">
 						<label for="ime" class="seo_label">Ime*</label>
 						<input id="ime" name="name" placeholder="Ime*" required>
@@ -80,7 +80,7 @@
 		<div id="center_footer">
 			<div class="footer_tekst" id="footer_tekst_prvi">
 				<p>email: info@montecode.me
-					<br>telefon: +382679125552
+					<br>telefon: +38267125552
 					<br>Nikšić, Crna Gora</p>
 			</div>
 			<div id="drugi_blok" class="footer_tekst">
