--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
 					<p>Pravimo aplikacije za android smartfone i tablete. Korisničko iskustvo nam je na prvom mjestu. Posebnu pažnju obraćamo na podršku što više veličina ekrana i verzija androida. Takođe se trudimo da aplikacije imaju optimalne performanse i svedemo potrošnju baterije na minimum. Sve naše aplikacije možete pogledati na našem  <a href="https://play.google.com/store/apps/developer?id=MonteCode" style="color:red; text-decoration:none;">Google Play Store nalogu</a>. U dogovoru sa vama možemo poslati besplatne demo verzije vašeg projekta.</p>
 				</div>
 			</div>
-			<h2 id="services_heading" class="heading_tekst">Zainteresovani za rad sa nama ? <a id="hire_us" href="contact.php">Kontakt</a></h2>
+			<h2 id="services_heading" class="heading_tekst">Zainteresovani za rad sa nama ? <a id="hire_us" href="contact.html">Kontakt</a></h2>
 			<div class="push"></div>
 		</div>
 	</div>
@@ -71,7 +71,7 @@
 <footer id="services_footer">
 	<div id="center_footer">
 		<div class="footer_tekst" id="footer_tekst_prvi">
-			<p>email: info@montecode.me<br>telefon: +382679125552<br>Nikšić, Crna Gora</p>
+			<p>email: info@montecode.me<br>telefon: +38267125552<br>Nikšić, Crna Gora</p>
 		</div>
 		<div id="drugi_blok" class="footer_tekst">
 			<div id="social">
